--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
-  "name": "possible",
+  "name": "possibleweb",
   "version": "0.1.0",
   "private": true,
+  "author": "Sambhav Aryal",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -17,9 +18,12 @@
     "@tsparticles/react": "^3.0.0",
     "@tsparticles/slim": "^3.3.0",
     "clsx": "^2.1.0",
+    "express": "^4.19.2",
     "framer-motion": "^11.1.1",
     "gsap": "^3.12.5",
     "mini-svg-data-uri": "^1.4.4",
+    "mongodb": "^6.5.0",
+    "mongoose": "^8.3.2",
     "next": "14.1.0",
     "react": "^18",
     "react-dom": "^18",
@@ -31,6 +35,7 @@
   },
   "devDependencies": {
     "@types/locomotive-scroll": "^4.1.3",
+    "@types/mongoose": "^5.11.97",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
